# dedup

./: README.md  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/nativeapp/: BootReceiver.kt  CpuModule.java  DatabaseHelper.kt  DirectoryMonitorModule.java  FileScannerModule.kt  MainActivity.kt  MainApplication.kt  NativeScannerModule.kt  SSDeep.kt  StorageModule.java  StoragePermissionHelper.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
shared/: NativeSSDeepModule.cpp  NativeSSDeepModule.h
specs/: NativeSSDeepModule.ts
src/components/: CpuUsage.js  Navbar.js  ScanProgressUI.js  Sidebar.js  StorageStats.js
src/layouts/: MainLayout.js
src/navigation/: AppNavigator.js
src/screens/: AboutUs.js  Contacts.js  Dashboard.js  FileMonitoring.js  HomeScreen.js  InitialScan.js  MainLogic.js  NewInitialScan.js  NotificationHandlerScreen.js  OnboardingScreen.js  OptimizedInitialScan.js  ResultsScreen.js  ScanScreen.js  SettingsScreen.js  TurboModule.js
src/utils/: fileUtils.js  permissions.js
